feat: 근처의 비슷한 병원을 찾는 API 를 추가한다
